force-app/main/default/objects/COM_Batch_Queue__c/COM_Batch_Queue__c.object-meta.xml
<CustomObject>
    <label>Batch Queue</label>
    <nameField>
        <displayFormat>BatchQueue-{000000}</displayFormat>
        <label>Batch Queue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Queues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>