force-app/main/default/objects/COM_Batch_Queue__c/fields/Apex_JobId__c.field-meta.xml
<CustomField>
    <fullName>Apex_JobId__c</fullName>
    <label>Apex JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>