force-app/main/default/objects/COM_Batch_Queue__c/fields/Dependent_Job_List__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Job_List__c</fullName>
    <label>Dependent Job List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>