force-app/main/default/objects/COM_Batch_Queue__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>