force-app/main/default/objects/COM_Batch_Queue__c/fields/Parameters_JSON__c.field-meta.xml
<CustomField>
    <fullName>Parameters_JSON__c</fullName>
    <label>Parameters JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>