force-app/main/default/objects/COM_Batch_Queue__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <label>Scope size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>