force-app/main/default/objects/COM_Batch_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>OBJECT_ID</columns>
    <columns>Batch_Class_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Apex_JobId__c</columns>
    <columns>Dependent_Job_List__c</columns>
    <columns>Parameters_JSON__c</columns>
    <columns>Exception__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Scope__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>